Profile data is populated once we have saved profile and click on edit profile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -160,6 +160,8 @@ img {
   opacity: 0.9;
   background: var(--light-color);
   color: #333;
+  border-radius: 5px;
+  box-shadow: 2px 2px #333;
 }
 
 .alert-wrapper {
