--- a/client/src/App.css
+++ b/client/src/App.css
@@ -71,6 +71,10 @@ img {
   color: var(--primary-color);
 }
 
+.text-secondary {
+  color: var(--secondary-color);
+}
+
 .text-dark {
   color: var(--dark-color);
 }
