--- a/client/src/App.css
+++ b/client/src/App.css
@@ -151,11 +151,12 @@ img {
 
 .badge {
   font-size: 0.8rem;
-  padding: 0.1rem;
+  padding: 0.3rem;
   text-align: center;
   margin: 0.3rem;
   background: var(--light-color);
   color: #333;
+  border-radius: 5px;
 }
 
 .alert {
