Front end with functionality provided by api complete

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -183,6 +183,8 @@ img {
 .alert-primary {
   background: var(--primary-color);
   color: #fff;
+  width: 30%;
+  text-align: center;
 }
 
 .btn-light,
